modules/boogie/test/data/TypeSystemException/Orderings3.bpl

type C;
const c2:C extends c2;        // error: constant as its own parent
